--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,3 +15,13 @@ jobs:
           distribution: 'adopt'
       - name: Run the Maven test
         run: mvn clean verify;
+
+  build:
+    name: Hello new contributor
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/first-interaction@v1
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          issue-message: "Hey, thank you for opening your first Issue ! 🙂"
+          pr-message: "Hey, thank you for opening your Pull Request !"
